--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
@@ -52,6 +56,11 @@
             <groupId>io.github.moon-cn</groupId>
             <artifactId>commons-lang-web</artifactId>
             <version>1.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.moon-cn</groupId>
+            <artifactId>commons-log-view</artifactId>
+            <version>1.0.1</version>
         </dependency>
 
         <dependency>
