--- a/web/package.json
+++ b/web/package.json
@@ -10,12 +10,12 @@
     "@ant-design/icons": "^5.2.6",
     "@ant-design/pro-components": "^2.0.0",
     "@moon-cn/commons-lang": "^1.0.0-beta.10",
+    "@moon-cn/hutool": "^1.0.0-beta.7",
     "antd": "^4.0.0",
     "axios": "^1.6.1",
     "codemirror": "^5.0.0",
     "react": "18.x",
     "react-dom": "18.x",
-    "react-lazylog": "^4.5.2",
     "umi": "^3.0.0"
   },
   "devDependencies": {
