--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,8 @@
     "react": "18.x",
     "react-dom": "18.x",
     "react-lazylog": "^4.5.3",
-    "umi": "^3.0.0"
+    "umi": "^3.0.0",
+    "xterm": "^5.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
