--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "@ant-design/icons": "^5.2.6",
     "@ant-design/pro-components": "^2.0.0",
     "@moon-cn/hutool": "^1.0.0-beta.23",
+    "@xterm/addon-attach": "^0.11.0",
     "antd": "^4.0.0",
     "codemirror": "^5.0.0",
     "react": "18.x",
