--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,8 @@
     "react-dom": "18.x",
     "react-lazylog": "^4.5.3",
     "umi": "^3.0.0",
-    "xterm": "^5.3.0"
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
