--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "@ant-design/pro-components": "^2.0.0",
     "@moon-cn/hutool": "^1.0.0-beta.21",
     "antd": "^4.0.0",
+    "axios": "^1.6.8",
     "codemirror": "^5.0.0",
     "react": "18.x",
     "react-dom": "18.x",
