--- a/bin/docker-compose.yml
+++ b/bin/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   admin:
-    image: mooncn/docker-admin:latest
+    image: registry.cn-hangzhou.aliyuncs.com/crec/docker-admin:latest
     restart: always
     ports:
       - "7001:7001" # 主机端口:容器端口
