--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,5 +1,12 @@
-dbip: mysql.sqlpub.com
-dbname: jttest
-dbusername: jttest
-dbpwd: 123456
 
+
+db_port: 3306
+db_ip: mysql.sqlpub.com
+db_database: jttest
+
+server:
+  port: 7001
+
+spring:
+  datasource:
+    username: jttest
