--- a/web/package.json
+++ b/web/package.json
@@ -12,12 +12,15 @@
     "build": "umi build"
   },
   "dependencies": {
+    "codemirror": "^5.0.0",
+    "react-lazylog": "^4.5.3",
+    "axios": "^1.6.8",
     "@ant-design/icons": "^5.4.0",
     "@tinymce/tinymce-react": "^5.0.0",
     "@tmgg/pro-table": "^5.0.3",
-    "@tmgg/tmgg-base": "0.1.42",
-    "@tmgg/tmgg-system": "0.1.42",
-    "@tmgg/tmgg-system-job": "0.1.42",
+    "@tmgg/tmgg-base": "0.1.43",
+    "@tmgg/tmgg-system": "0.1.43",
+    "@tmgg/tmgg-system-job": "0.1.43",
     "antd": "^5.20.3",
     "antd-img-crop": "^4.23.0",
     "dayjs": "^1.11.13",
