--- a/web/package.json
+++ b/web/package.json
@@ -12,20 +12,22 @@
     "build": "umi build"
   },
   "dependencies": {
-    "codemirror": "^5.0.0",
-    "react-lazylog": "^4.5.3",
-    "axios": "^1.6.8",
     "@ant-design/icons": "^5.4.0",
     "@tinymce/tinymce-react": "^5.0.0",
     "@tmgg/pro-table": "^5.0.3",
     "@tmgg/tmgg-base": "0.1.43",
+    "@tmgg/tmgg-commons-lang": "^0.1.43",
     "@tmgg/tmgg-system": "0.1.43",
     "@tmgg/tmgg-system-job": "0.1.43",
     "antd": "^5.20.3",
     "antd-img-crop": "^4.23.0",
+    "axios": "^1.6.8",
+    "codemirror": "^5.0.0",
     "dayjs": "^1.11.13",
     "react": "^18.2.0",
+    "react-amap": "^1.2.8",
     "react-dom": "^18.2.0",
+    "react-lazylog": "^4.5.3",
     "umi": "^4.0.0"
   }
 }
