--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "@tmgg/tmgg-commons-lang": "^0.1.43",
     "@tmgg/tmgg-system": "0.1.43",
     "@tmgg/tmgg-system-job": "0.1.43",
+    "@tmgg/tmgg-system-code-gen": "0.1.43",
     "antd": "^5.20.3",
     "antd-img-crop": "^4.23.0",
     "axios": "^1.6.8",
