--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <version>8.0.33</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-core</artifactId>
+            <version>4.5.1</version>
+        </dependency>
 
         <dependency>
             <groupId>com.tencentcloudapi</groupId>
