--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,6 +10,6 @@ spring:
     username: jttest
 server:
   port: 8080
-tmgg:
-  system:
-    auto-update-sys-data: true
+
+sys:
+  auto-update-sys-data: true
