--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,11 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>io.github.moon-cn</groupId>
+            <artifactId>commons-log-view</artifactId>
+            <version>1.0.3</version>
+        </dependency>
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
