--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.github.moon-cn</groupId>
-            <artifactId>commons-log-view</artifactId>
-            <version>1.0.3</version>
-        </dependency>
-        <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
@@ -42,7 +37,10 @@
             <artifactId>tmgg-system-code-gen</artifactId>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>io.github.tmgg</groupId>
+            <artifactId>tmgg-commons-log-view</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
