--- a/web/package.json
+++ b/web/package.json
@@ -14,12 +14,9 @@
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
     "@tinymce/tinymce-react": "^5.0.0",
-    "@tmgg/pro-table": "^5.0.3",
-    "@tmgg/tmgg-base": "0.1.46",
-    "@tmgg/tmgg-commons-lang": "0.1.46",
-    "@tmgg/tmgg-system": "0.1.46",
-    "@tmgg/tmgg-system-job": "0.1.46",
-    "@tmgg/tmgg-system-code-gen": "0.1.46",
+    "@tmgg/tmgg-base": "^0.2.13",
+    "@tmgg/tmgg-commons-lang": "^0.2.13",
+    "@tmgg/tmgg-system": "^0.2.13",
     "antd": "^5.20.3",
     "antd-img-crop": "^4.23.0",
     "axios": "^1.6.8",
