--- a/.github/workflows/docker-image-aliyun.yml
+++ b/.github/workflows/docker-image-aliyun.yml
@@ -20,9 +20,12 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        uses: docker/metadata-action@v5
         with:
           images: registry.cn-hangzhou.aliyuncs.com/mxvc/docker-admin
+          tags: |
+            # set latest tag for default branch
+            type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Docker image
         id: push
