--- a/.github/workflows/docker-image-aliyun.yml
+++ b/.github/workflows/docker-image-aliyun.yml
@@ -24,7 +24,9 @@ jobs:
         with:
           images: registry.cn-hangzhou.aliyuncs.com/mxvc/docker-admin
           tags: |
-            # set latest tag for default branch
+          # tag event
+            type=ref,event=tag
+          # set latest tag for default branch
             type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Docker image
