--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.8",
     "codemirror": "^5.0.0",
     "dayjs": "^1.11.13",
+    "echarts": "^5.6.0",
     "react": "^18.2.0",
     "react-amap": "^1.2.8",
     "react-dom": "^18.2.0",
