--- a/.github/workflows/docker-image-aliyun.yml
+++ b/.github/workflows/docker-image-aliyun.yml
@@ -1,8 +1,8 @@
 name: Aliyun Docker
 
 on:
-  push:
-
+  release:
+    types: [published]
 jobs:
   push_to_registry:
     name: Push Docker image to Aliyun
