--- a/web/package.json
+++ b/web/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
     "@tinymce/tinymce-react": "^5.0.0",
-    "@tmgg/tmgg-base": "^0.3.46",
-    "@tmgg/tmgg-commons-lang": "^0.3.46",
-    "@tmgg/tmgg-system": "^0.3.46",
+    "@tmgg/tmgg-base": "^0.3.61",
+    "@tmgg/tmgg-commons-lang": "^0.3.61",
+    "@tmgg/tmgg-system": "^0.3.61",
     "antd": "^5.20.3",
     "antd-img-crop": "^4.23.0",
     "axios": "^1.6.8",
@@ -27,7 +27,6 @@
     "react-amap": "^1.2.8",
     "react-dom": "^18.2.0",
     "react-lazylog": "^4.5.3",
-    "umi": "^4.0.0",
-    "react-activation" : "^0.13.0"
+    "umi": "^4.0.0"
   }
 }
