--- a/.github/workflows/docker-image-aliyun.yml
+++ b/.github/workflows/docker-image-aliyun.yml
@@ -1,8 +1,9 @@
 name: Aliyun Docker
 
 on:
-  release:
-    types: [published]
+  push:
+    tags:
+      - 'v*'
 jobs:
   push_to_registry:
     name: Push Docker image to Aliyun
