增加连接池大小

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,10 @@
 spring:
   profiles:
     active: default,dev
-
+  datasource:
+    hikari:
+      minimum-idle: 20
+      maximum-pool-size: 100
 
 logging:
   file:
