--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,9 @@
     "react-amap": "^1.2.8",
     "react-dom": "^18.2.0",
     "react-lazylog": "^4.5.3",
-    "umi": "^4.0.0"
+    "umi": "^4.0.0",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0",
+    "@xterm/addon-attach": "^0.11.0"
   }
 }
