--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,7 @@
 {
   "devDependencies": {
     "@types/lodash": "^4.14.200",
-    "@types/react": "^18.0.0",
+    "@types/react": "^18.3.23",
     "@types/react-dom": "^18.0.0",
     "@types/react-lazylog": "^4.5.1",
     "@umijs/plugins": "^4.3.17",
@@ -17,6 +17,9 @@
     "@tmgg/tmgg-base": "1.1.20",
     "@tmgg/tmgg-commons-lang": "1.1.20",
     "@tmgg/tmgg-system": "1.1.20",
+    "@xterm/addon-attach": "^0.11.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/xterm": "^5.5.0",
     "antd": "^5.20.3",
     "antd-img-crop": "^4.23.0",
     "axios": "^1.6.8",
@@ -27,9 +30,6 @@
     "react-amap": "^1.2.8",
     "react-dom": "^18.2.0",
     "react-lazylog": "^4.5.3",
-    "umi": "^4.0.0",
-    "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0",
-    "@xterm/addon-attach": "^0.11.0"
+    "umi": "^4.0.0"
   }
 }
