--- a/web/.env
+++ b/web/.env
@@ -1,2 +1,3 @@
 PORT=51105
 UMI_PLUGINS=@jiangood/springboot-admin-starter/config/dist/plugins/route-plugin,@jiangood/springboot-admin-starter/config/dist/plugins/form-plugin
+UMI_DEV_SERVER_COMPRESS=none
