--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
-    "@jiangood/springboot-admin-starter": "0.0.1-beta.18",
+    "@jiangood/springboot-admin-starter": "0.0.3",
     "@tinymce/tinymce-react": "^5.0.0",
     "antd": "^5.20.3",
     "antd-img-crop": "^4.23.0",
